removed custom stopwords from JD dataset for week 3 prep + updated project_notes

--- a/03_resume_preprocessing.ipynb
+++ b/03_resume_preprocessing.ipynb
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "6bce92d4",
    "metadata": {},
    "outputs": [
@@ -629,12 +629,20 @@
     "plt.imshow(wordcloud, interpolation='bilinear')\n",
     "plt.axis('off')\n",
     "plt.title(\"Most Common Words in Resumes\", fontsize=16)\n",
-    "plt.show()\n"
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af0bceb2",
+   "metadata": {},
+   "source": [
+    "## Job Category Simplification"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "1704768a",
    "metadata": {},
    "outputs": [
@@ -676,7 +684,7 @@
     "# Count how many resumes per category\n",
     "category_counts = df['Category'].value_counts()\n",
     "\n",
-    "print(category_counts)\n"
+    "print(category_counts)"
    ]
   },
   {
@@ -728,6 +736,14 @@
     "df = df[df['Category'].isin(keep_categories)].reset_index(drop=True)\n",
     "print(f\"Remaining resumes: {len(df)}\")\n",
     "df['Category'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebacc837",
+   "metadata": {},
+   "source": [
+    "## Removing Custom Stopwords"
    ]
   },
   {
@@ -883,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "d75acf67",
    "metadata": {},
    "outputs": [
@@ -932,8 +948,7 @@
     "\n",
     "# print neatly\n",
     "for word, freq in top_20:\n",
-    "    print(f\"{word:<15} {freq}\")\n",
-    "\n"
+    "    print(f\"{word:<15} {freq}\")"
    ]
   },
   {
