Tested and verified CV and job description preprocessing successfully; all preprocessing outputs are consistent and correct.

--- a/notebooks/04_semantic_matching.ipynb
+++ b/notebooks/04_semantic_matching.ipynb
@@ -820,12 +820,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "966e0503",
    "metadata": {},
    "outputs": [],
    "source": [
-    "matches_df.to_csv(\"outputs/top_matches.csv\")"
+    "matches_df.to_csv(\"outputs/top_matches_with_missing_skills.csv\")"
    ]
   },
   {
